2010-07-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin Adler.

        Patch for https://bugs.webkit.org/show_bug.cgi?id=41553
        Make StringExtras.h versions of snprintf and vsnprintf match the unix versions.

        - MSVC does not ensure the buffers are null terminated as the unix versions do.

        * runtime/JSGlobalObjectFunctions.cpp: Cleanup includes.
        * runtime/UString.cpp: Clean up includes.
        (JSC::UString::from): Don't pass sizeof(buf) - 1, that is wrong.
        * wtf/StringExtras.h:
        (snprintf): Ensure null termination of buffer.
        (vsnprintf): Ditto.

2010-07-03  Yong Li  <yoli@rim.com>

        Reviewed by Darin Adler.

        Make Arguments::MaxArguments clamping work for numbers >= 0x80000000 in
        the interpreter as well as the JIT.

        https://bugs.webkit.org/show_bug.cgi?id=41351
        rdar://problem/8142141

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute): Fix signed integer overflow problem
        in op_load_varargs handling. 0xFFFFFFFF was read as -1.

2010-06-26  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Dumitru Daniliuc.

        Support for keys and in-memory storage for IndexedDB
        https://bugs.webkit.org/show_bug.cgi?id=41252

        Set the role to Private.

        * JavaScriptCore.xcodeproj/project.pbxproj:

2010-07-02  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Move BOM handling out of the lexer and parser
        https://bugs.webkit.org/show_bug.cgi?id=41539

        Doing the BOM stripping in the lexer meant that we could
        end up having to strip the BOMs from a source multiple times.
        To deal with this we now require all strings provided by
        a SourceProvider to already have had the BOMs stripped.
        This also simplifies some of the lexer logic.

        * parser/Lexer.cpp:
        (JSC::Lexer::setCode):
        (JSC::Lexer::sourceCode):